Look for list of available locales in /usr/lib/locale

Previously, it was looking in /usr/share/locale
which isn't right.  This only affects distributions
which don't have a locale-archive file.

See http://bugzilla.gnome.org/show_bug.cgi?id=570003